# roebuck-pr-analyzer

./: .gitignore  README.md  config.toml.example  pyproject.toml
.roebuck/: profile.json
docs/: architecture.md  howto-github-actions.md  requirements.md  task-plan.md
docs/adr/: ADR-0001-cli-framework.md  ADR-0002-github-client.md  ADR-0003-llm-output-strategy.md  ADR-0004-pydantic-config-and-output.md  ADR-0005-two-tier-model-pattern.md  ADR-0006-toml-configuration.md  ADR-0007-project-profile-extraction.md  ADR-0008-language-extractor-plugins.md
docs/design/: project-profile.md
src/roebuck/: __main__.py  claude_client.py  cli.py  config.py  github_client.py  models.py  spec_loader.py
src/roebuck/analysers/: churn.py  file_history.py  pr.py  profile.py  release.py
src/roebuck/extractors/: __init__.py  python.py  registry.py
src/roebuck/prompts/: _shared.py  churn.py  file_history.py  pr.py  profile.py  release.py
tests/: test_analysers.py  test_claude_client.py  test_cli.py  test_config.py  test_extractors.py  test_github_client.py  test_models.py  test_prompts.py  test_reports.py
