[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "roebuck"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.0",
    "pydantic>=2.7.0",
    "PyGithub>=2.3.0",
    "anthropic>=0.28.0",
    "rich>=13.7.0",
]

[project.scripts]
roebuck = "roebuck.cli:app"

[project.optional-dependencies]
dev = ["pytest>=8.2.0", "pytest-mock>=3.14.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/roebuck"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
